Bug Accessiblity: fix low contrast color

--- a/src/app/createEntry/createEntry.module.css
+++ b/src/app/createEntry/createEntry.module.css
@@ -51,7 +51,7 @@
   }
   
   .appNameSecondary {
-    color: #1CB5E0;
+    color: #379bb7; /*Alternate for better color contrast*/
     font-weight: bold;
   }
 
