--- a/src/app/viewEntries/viewEntries.module.css
+++ b/src/app/viewEntries/viewEntries.module.css
@@ -48,7 +48,7 @@
   }
   
   .appNameSecondary {
-    color: #1CB5E0;
+    color: #379bb7; /*Alternate for better color contrast*/
     font-weight: bold;
   }
 
